--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.10.1",
     "node-notifier": "^9.0.0",
     "puppeteer": "^5.5.0"
   }
