--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dayjs": "^1.10.1",
+    "node-fetch": "^2.6.1",
     "node-notifier": "^9.0.0",
     "puppeteer": "^5.5.0"
   }
